# OOP_Task4

./: .gitignore  AddElementDialog.cpp  AddElementDialog.h  AddElementWindow.ui  CMakeLists.txt  EditElementDialog.cpp  EditElementDialog.h  EditElementWindow.ui  ElectricalCircuitCalculator.cpp  ElectricalCircuitCalculator.h  ElectricalElement.cpp  ElectricalElement.h  ElectricalElementsManager.cpp  ElectricalElementsManager.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OOP_Task4.sln  OOP_Task4.vcxproj  OOP_Task4.vcxproj.filters  README.md  RenderArea.cpp  RenderArea.h  main.cpp
ElectricalElements/: CurrentSource.cpp  CurrentSource.h  ElectricHeater.cpp  ElectricHeater.h  ElectricLamp.cpp  ElectricLamp.h  Resistor.cpp  Resistor.h  Switch.cpp  Switch.h  VoltageSource.cpp  VoltageSource.h  Wire.cpp  Wire.h
ExampleCircuits/: cat.json  lampAndHeater.json  test.json  test2.json  test3.json
